Fix alignment in "Link to this version" section

--- a/src/scss/components/_permalink-tools.scss
+++ b/src/scss/components/_permalink-tools.scss
@@ -31,7 +31,7 @@
 	.btn {
 		flex: 1 1 0;
 
-		&:first-child {
+		&:first-child:not(:only-child) {
 			margin-bottom: variables.$space-md;
 
 			@media (min-width: variables.$bp-md) {
